[metadata]
name = pyramid_nacl_session
version = 0.4.dev0
description = Encrypted session cookie serializer for Pyramid
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = pyramid sessions cryptography security
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: Repoze Public License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Security :: Cryptography

url = https://github.com/Pylons/pyramid_nacl_session
project_urls =
    Documentation = https://docs.pylonsproject.org/projects/pyramid-nacl-session/en/latest/index.html
    Changelog = https://docs.pylonsproject.org/projects/pyramid-nacl-session/en/latest/changes.html
    Issue Tracker = https://github.com/Pylons/pyramid_nacl_session/issues
author = Agendaless Consulting
maintainer = Pylons Project
maintainer_email = pylons-discuss@googlegroups.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    pyramid >= 1.5
    PyNaCl

[options.entry_points]
console_scripts =
    print_secret = pyramid_nacl_session.scripts:print_secret

[options.packages.find]
where=src

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cover
    coverage>=5.0

docs =
    Sphinx>=1.8.1
    pylons-sphinx-themes>=1.0.9

[bdist_wheel]
universal = 1

[tool:pytest]
python_files = test_*.py
testpaths =
    tests
addopts = -W always --cov
